# auto-research

./: .gitignore  auto_research.db  pyproject.toml
app/: dashboard.py
auto_research/: config.py  db.py  macro.py  news.py  prices.py
